- Updated to be a bit more responsive on mobile devices - Fixed issue with initial drawere options not being set properly

--- a/src/app/find-movie/find-movie.component.scss
+++ b/src/app/find-movie/find-movie.component.scss
@@ -1,6 +1,4 @@
 .main {
-  padding: 0.45rem 2.25rem 0.45rem 2.25rem;
-  // padding: 0;
   position: relative;
   height: 100vh;
   overflow-y: scroll;
